[gd_scene load_steps=6 format=3 uid="uid://og4a0n40gi6l"]

[ext_resource type="PackedScene" uid="uid://dbnxculhinbl0" path="res://Objects/Car/DesertBuggy.gltf" id="1_euwix"]
[ext_resource type="PackedScene" uid="uid://cva8yispijq5f" path="res://Objects/PixelSnappingCamera3D/pixel_snapping_camera_3d.tscn" id="2_jsopn"]
[ext_resource type="Script" path="res://Objects/Car/vhehicle.gd" id="2_wvcbx"]
[ext_resource type="Script" path="res://face_object.gd" id="4_jhpdi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gk8we"]
radius = 0.75
height = 3.0

[node name="Desert_Buggy" instance=ExtResource("1_euwix")]

[node name="Node" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="Desert_Buggy" parent="Node" index="0"]
mass = 550.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.25, 0.5)
script = ExtResource("2_wvcbx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node/Desert_Buggy" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.35, 0.3)
shape = SubResource("CapsuleShape3D_gk8we")

[node name="Wheel_Front_Left" parent="Node/Desert_Buggy" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.125, 1, -2.5)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 1.0
wheel_radius = 0.6
wheel_rest_length = 0.75
suspension_travel = 1.0
suspension_stiffness = 20.0
suspension_max_force = 5000.0
damping_compression = 0.2
damping_relaxation = 0.4

[node name="Wheel_Front_Left" parent="Node/Desert_Buggy/Wheel_Front_Left" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.375, 0, 0)

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Node/Desert_Buggy/Wheel_Front_Left" index="1"]
remote_path = NodePath("../../Wheel_Mount_Front_Left")
update_rotation = false

[node name="Wheel_Back_Left" parent="Node/Desert_Buggy" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.75, 1.5)
use_as_traction = true
wheel_roll_influence = 1.0
wheel_radius = 0.6
wheel_rest_length = 0.5
suspension_travel = 0.5
suspension_stiffness = 60.0
suspension_max_force = 20000.0
damping_compression = 0.7
damping_relaxation = 0.8

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Node/Desert_Buggy/Wheel_Back_Left" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.375, 0, 0)
remote_path = NodePath("../../Wheel_Mount_Back_Left")
update_rotation = false

[node name="Wheel_Back_Right" parent="Node/Desert_Buggy" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.75, 1.5)
use_as_traction = true
wheel_roll_influence = 1.0
wheel_radius = 0.6
wheel_rest_length = 0.5
suspension_travel = 0.5
suspension_stiffness = 60.0
suspension_max_force = 20000.0
damping_compression = 0.7
damping_relaxation = 0.8

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Node/Desert_Buggy/Wheel_Back_Right" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.375, 0, 0)
remote_path = NodePath("../../Wheel_Mount_Back_Right")
update_rotation = false

[node name="Wheel_Front_Right" parent="Node/Desert_Buggy" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.125, 1, -2.5)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 1.0
wheel_radius = 0.6
wheel_rest_length = 0.75
suspension_travel = 1.0
suspension_stiffness = 20.0
suspension_max_force = 5000.0
damping_compression = 0.2
damping_relaxation = 0.4

[node name="Wheel_Front_Right" parent="Node/Desert_Buggy/Wheel_Front_Right" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.375, 0, 0)

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Node/Desert_Buggy/Wheel_Front_Right" index="1"]
remote_path = NodePath("../../Wheel_Mount_Front_Right")
update_rotation = false

[node name="CameraPivot" type="Node3D" parent="Node/Desert_Buggy" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
top_level = true

[node name="CameraArm" type="Node3D" parent="Node/Desert_Buggy/CameraPivot" index="0"]
transform = Transform3D(0.707107, 0.353553, -0.612373, 0, 0.866025, 0.5, 0.707107, -0.353553, 0.612373, 0, 0, 0)

[node name="PixelSnappingCamera3D" parent="Node/Desert_Buggy/CameraPivot/CameraArm" index="0" instance=ExtResource("2_jsopn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100)

[node name="CameraDolly" type="RemoteTransform3D" parent="Node/Desert_Buggy" index="6"]
remote_path = NodePath("../CameraPivot")
update_rotation = false
update_scale = false

[node name="Piston_Left" parent="Node/Desert_Buggy" index="7" node_paths=PackedStringArray("target")]
script = ExtResource("4_jhpdi")
target = NodePath("../Wheel_Front_Left")

[node name="Piston_Right" parent="Node/Desert_Buggy" index="8" node_paths=PackedStringArray("target")]
script = ExtResource("4_jhpdi")
target = NodePath("../Wheel_Front_Right")

[node name="Wheel_Mount_Front_Left" parent="Node/Desert_Buggy" index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.125, 1, -2.5)

[node name="Wheel_Mount_Front_Right" parent="Node/Desert_Buggy" index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.125, 1, -2.5)

[node name="Suspension_Left" parent="Node/Desert_Buggy" index="11" node_paths=PackedStringArray("target")]
script = ExtResource("4_jhpdi")
target = NodePath("../Wheel_Mount_Back_Left")

[node name="Suspension_Right" parent="Node/Desert_Buggy" index="12" node_paths=PackedStringArray("target")]
script = ExtResource("4_jhpdi")
target = NodePath("../Wheel_Mount_Back_Right")

[node name="Wheel_Mount_Back_Left" parent="Node/Desert_Buggy" index="13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.125, 0.75, 1.5)

[node name="Wheel_Mount_Back_Right" parent="Node/Desert_Buggy" index="14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.125, 0.75, 1.5)
